--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -5,11 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.yascode</groupId>
-        <artifactId>structural</artifactId>
+        <artifactId>gangs-of-four</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>composite</artifactId>
+    <artifactId>structural</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>composite</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
