--- a/structural/pom.xml
+++ b/structural/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>composite</module>
+        <module>proxy</module>
     </modules>
 
     <properties>
