--- a/structural/proxy/pom.xml
+++ b/structural/proxy/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.yascode</groupId>
-        <artifactId>gangs-of-four</artifactId>
+        <artifactId>structural</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
