--- a/structural/facade/pom.xml
+++ b/structural/facade/pom.xml
@@ -5,19 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.yascode</groupId>
-        <artifactId>gangs-of-four</artifactId>
+        <artifactId>structural</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>structural</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>composite</module>
-        <module>proxy</module>
-        <module>adapter</module>
-        <module>facade</module>
-        <module>bridge</module>
-    </modules>
+    <artifactId>facade</artifactId>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
